tests/paczka1/fuzzy1/16226105.err
Error in line 6: gGeN A135 12,6
Error in line 15: h3HihR A239 61,9
Error in line 10: d1HvP8 A135 71,1
